tests/ui/semaphore_option_name.stderr
error[E0597]: `name` does not live long enough
  --> tests/ui/semaphore_option_name.rs:15:22
   |
13 |     let name = CString::new("name").unwrap();
   |         ---- binding `name` declared here
14 |     let mut opts = SemaphoreOptions::default();
15 |     opts.name = Some(&name);
   |                      ^^^^^ borrowed value does not live long enough
...
18 | }
   | -
   | |
   | `name` dropped here while still borrowed
   | borrow might be used here, when `pinned` is dropped and runs the `Drop` code for type `SemaphoreContext`
   |
   = note: values in a scope are dropped in the opposite order they are defined
